Curve Display hides all curves/wires as soon as any part has faces [due to filling/extrude/etc] #76196

Closed
opened 2020-04-28 18:59:36 +02:00 by Steve Warner · 17 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.48

Blender Version
Broken: version: 6da097136c
Worked: 6da097136c ^

Short description of error
Curves aren't showing up correctly in 2.83beta. In 2.82, complex curve objects (e.g. CAD plans) displayed fine. In 2.83, the curve object isn't displaying properly. See the image below.
This is because curves dont display any wires as soon as any faces are generated (due to filling in this case) and only display the faces instead

Exact steps for others to reproduce the error
CAD-Reduced.7z

Load a complex CAD plan in 2.82a.
Save the .blend file
Open in 2.83beta
Notice the difference

image.png

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.48 **Blender Version** Broken: version: 6da097136c Worked: 6da097136c ^ **Short description of error** Curves aren't showing up correctly in 2.83beta. In 2.82, complex curve objects (e.g. CAD plans) displayed fine. In 2.83, the curve object isn't displaying properly. See the image below. This is because curves dont display any wires as soon as any faces are generated (due to filling in this case) and only display the faces instead **Exact steps for others to reproduce the error** [CAD-Reduced.7z](https://archive.blender.org/developer/F8501591/CAD-Reduced.7z) Load a complex CAD plan in 2.82a. Save the .blend file Open in 2.83beta Notice the difference ![image.png](https://archive.blender.org/developer/F8499432/image.png)
Author

Added subscriber: @stevewarner

Added subscriber: @stevewarner
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Can you add a minimal file that can help test it?
Also, if possible can it be redone with built-in objects. ?

Can you add a minimal file that can help test it? Also, if possible can it be redone with built-in objects. ?
Author

Here's a stripped down version of the file. It looks fine in 2.82a. Display is broken in 2.3 beta. But the data is still there. If you go into Edit mode, you can see it. Just not in object mode.

Thanks!

CAD-Reduced.7z

Here's a stripped down version of the file. It looks fine in 2.82a. Display is broken in 2.3 beta. But the data is still there. If you go into Edit mode, you can see it. Just not in object mode. Thanks! [CAD-Reduced.7z](https://archive.blender.org/developer/F8501591/CAD-Reduced.7z)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member
6da097136c CC @lichtwerk
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-04-30 09:50:46 +02:00
Member

Will check...

Will check...
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Well, this obviously goes away if the 2D curves are not filled [Properties Editor > Curve > Shape panel > Fill Mode set to None]
In this file some parts of the curve object generate faces [due to success in filling] and some others dont [where filling isnt possible].

6da097136c disabled the wires/curves drawing whenever any faces would be generated (looks like this is a bit too 'agressive')
I think the goal should be to draw wires/curves for all parts that dont generate faces and dont draw them if we have faces.
Need to find a way to do this not on a per-object basis, but on a per-spline basis?
(there can always be splines that generate faces due to filling/extrude/etc and splines that dont in a single object)

If this turns out to be problematic to implement, it might be better to always draw curves/wires and faces at the same time...

CC @Jeroen-Bakker

Well, this obviously goes away if the 2D curves are **not** filled [`Properties Editor` > `Curve` > `Shape` panel > `Fill Mode` set to `None`] In this file some parts of the curve object generate faces [due to success in filling] and some others dont [where filling isnt possible]. 6da097136c disabled the wires/curves drawing whenever any faces would be generated (looks like this is a bit too 'agressive') I think the goal should be to draw wires/curves for all parts that dont generate faces and dont draw them if we have faces. Need to find a way to do this not on a per-object basis, but on a per-spline basis? (there can always be splines that generate faces due to filling/extrude/etc and splines that dont in a single object) If this turns out to be problematic to implement, it might be better to always draw curves/wires **and** faces at the same time... CC @Jeroen-Bakker
Philipp Oeser changed title from Curve Display is Broken to Curve Display hides all curves/wires as soon as any part has faces [due to filling/extrue/etc] 2020-04-30 10:44:10 +02:00
Philipp Oeser changed title from Curve Display hides all curves/wires as soon as any part has faces [due to filling/extrue/etc] to Curve Display hides all curves/wires as soon as any part has faces [due to filling/extrude/etc] 2020-04-30 10:46:18 +02:00
Member

I feel like this needs a design decission:

  • in which cases do we draw faces / wires / both ?
  • we could go with both (always): this report (#76196) would be closed, #59271 would be Invalid instead of resolved
  • we could keep as is (only draw wires if we dont have any faces) -- but make an exception for 2D curves with a Fill Mode other than None?

For the second case, see D7594: Fix #76196: Curve Display hides all curves/wires as soon as any part has faces [due to filling/extrude/etc]

I feel like this needs a design decission: - in which cases do we draw faces / wires / both ? - we could go with both (always): this report (#76196) would be closed, #59271 would be Invalid instead of resolved - we could keep as is (only draw wires if we dont have any faces) -- but make an exception for 2D curves with a `Fill Mode` other than `None`? For the second case, see [D7594: Fix #76196: Curve Display hides all curves/wires as soon as any part has faces [due to filling/extrude/etc]](https://archive.blender.org/developer/D7594)
Author

All good points. The reason this seemed like a bug to me is that I loaded in a curve object and didn't see all the curves.

The first thing I did was switch from Solid viewport rendering to Wireframe rendering, with the expectation that if this was a fill issue, Wireframe shading would reveal that. That's how Adobe Illustrator works. You have a Wireframe "Outline" view mode and a Solid "Preview" view mode that removes any fills and just shows the raw vectors.

It seems to me that the solution is this:

If a curve object's Fill Mode is set to anything other than "None," it should attempt to fill (where applicable) in Solid shaded mode.
If a curve object's Fill Mode is set to anything other than "None," it should NOT fill when in Wireframe shaded mode.

Wireframe shaded view takes away the polygons fill and only leaves the edges. It should do the same thing for curves.

All good points. The reason this seemed like a bug to me is that I loaded in a curve object and didn't see all the curves. The first thing I did was switch from Solid viewport rendering to Wireframe rendering, with the expectation that if this was a fill issue, Wireframe shading would reveal that. That's how Adobe Illustrator works. You have a Wireframe "Outline" view mode and a Solid "Preview" view mode that removes any fills and just shows the raw vectors. It seems to me that the solution is this: If a curve object's Fill Mode is set to anything other than "None," it should attempt to fill (where applicable) in Solid shaded mode. If a curve object's Fill Mode is set to anything other than "None," it should NOT fill when in Wireframe shaded mode. Wireframe shaded view takes away the polygons fill and only leaves the edges. It should do the same thing for curves.
Author

Any follow up to this? I tried loading the provided sample into the latest build (5/27/2020) and it's still not displaying correctly, whereas it does in 2.82a.

Any follow up to this? I tried loading the provided sample into the latest build (5/27/2020) and it's still not displaying correctly, whereas it does in 2.82a.

This issue was referenced by a87eee65fc

This issue was referenced by a87eee65fc768b7bc3c2f8c33d043b577f84f124
Member

In #76196#921660, @stevewarner wrote:
All good points. The reason this seemed like a bug to me is that I loaded in a curve object and didn't see all the curves.

The first thing I did was switch from Solid viewport rendering to Wireframe rendering, with the expectation that if this was a fill issue, Wireframe shading would reveal that. That's how Adobe Illustrator works. You have a Wireframe "Outline" view mode and a Solid "Preview" view mode that removes any fills and just shows the raw vectors.

It seems to me that the solution is this:

If a curve object's Fill Mode is set to anything other than "None," it should attempt to fill (where applicable) in Solid shaded mode.
If a curve object's Fill Mode is set to anything other than "None," it should NOT fill when in Wireframe shaded mode.

Wireframe shaded view takes away the polygons fill and only leaves the edges. It should do the same thing for curves.

Put up D7874: Fix #76196: Curve Display hides wires as soon as any part has faces [due to filling/extrude/etc] for review which does this

> In #76196#921660, @stevewarner wrote: > All good points. The reason this seemed like a bug to me is that I loaded in a curve object and didn't see all the curves. > > The first thing I did was switch from Solid viewport rendering to Wireframe rendering, with the expectation that if this was a fill issue, Wireframe shading would reveal that. That's how Adobe Illustrator works. You have a Wireframe "Outline" view mode and a Solid "Preview" view mode that removes any fills and just shows the raw vectors. > > It seems to me that the solution is this: > > If a curve object's Fill Mode is set to anything other than "None," it should attempt to fill (where applicable) in Solid shaded mode. > If a curve object's Fill Mode is set to anything other than "None," it should NOT fill when in Wireframe shaded mode. > > Wireframe shaded view takes away the polygons fill and only leaves the edges. It should do the same thing for curves. Put up [D7874: Fix #76196: Curve Display hides wires as soon as any part has faces [due to filling/extrude/etc]](https://archive.blender.org/developer/D7874) for review which does this
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76196
No description provided.