source/blender/draw/engines/overlay/overlay_wireframe.c
@@ -197,13 +197,15 @@ void OVERLAY_wireframe_cache_populate(OVERLAY_Data *vedata,
     struct GPUBatch *geom = NULL;
     switch (ob->type) {
       case OB_CURVE:
-        if (ob->runtime.curve_cache && BKE_displist_has_faces(&ob->runtime.curve_cache->disp)) {
+        if (!pd->wireframe_mode && !use_wire && ob->runtime.curve_cache &&
+            BKE_displist_has_faces(&ob->runtime.curve_cache->disp)) {
           break;
         }
         geom = DRW_cache_curve_edge_wire_get(ob);
         break;
       case OB_FONT:
-        if (ob->runtime.curve_cache && BKE_displist_has_faces(&ob->runtime.curve_cache->disp)) {
+        if (!pd->wireframe_mode && !use_wire && ob->runtime.curve_cache &&
+            BKE_displist_has_faces(&ob->runtime.curve_cache->disp)) {
           break;
         }
         geom = DRW_cache_text_loose_edges_get(ob);
